--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
       <h2 id="intro-heading" class="sr-only">가시림 소개</h2>
 
       <div class="article article-container reveal from-up">
-        <h3 class="h center">수목원을 넘어 복합 문화 공간을 지향하다.</h3>
-        <p class="p center">가시림은 제주 토박이 조경가가 30년 이상의 경력으로 직접 설계·조성한 4,000평 규모의 민간 수목원이며, 원예·명상·예술 등 다양한 문화 프로그램을 운영하는 복합 문화 공간이다.</p>
+        <h3 class="intro-h3 center">加 時 林</h3>
+        <p class="p center">더할 가         때 시          수풀 림</p>
       </div>
 
       <div class="intro-hero reveal parallax from-up" data-video>
@@ -57,7 +57,10 @@
 
       <div class="article article-container reveal from-left">
         <h3 class="h left">제주 4호 민간정원</h3>
-        <p class="p left">가시림 수목원은 정부에 등록된 제주 4호 민간정원으로 2023년 12월에 오픈했으며 <b>14개의 정원·숲·길</b>로 구성되어 있다. <b>200년 이상 된 수목</b>이 다수 존재하며, 단순한 포토스팟 조형물이 아닌 진정성 있는 식물 배치 철학을 바탕으로 운영된다. 대표가 매일 아침 직접 나와 세심하게 관리함으로써 사계절 각기 다른 경관을 제공하며, 한 곳에서 다양한 <b>희귀 식물</b>을 감상할 수 있는 독보적인 수목원으로 자리매김하고 있다.</p>
+        <p class="p left">가시림 수목원은 정부에 등록된 제주 4호 민간정원으로 2023년 12월에 오픈했으며 <b>12개의 정원·숲·길</b>로 구성되어 있습니다. <b>150년</b> 이상 된 수목이 다수 존재하며, 
+                          단순한 포토스팟 조형물이 아닌 진정성 있는 식물 배치 철학을 바탕으로 운영됩니다. 30년 동안 조경 사업에 몸담아 온 강남춘 대표는 자연이 지닌 치유의 힘을 직접 경험하며, 
+                          그 소중 한 경험을 더 많은 사람들과 나누고자 하는 마음 으로 가시림수목원을 조성했습니다. 이 마음을 담 아 매일 아침 수목원 곳곳을 분주히 가꿉니다.
+                          <br>이러한 노력으로, 가시림은 <b>사계절</b> 각기 다른 경관을 선사하며, <b>제주 자생 식물</b>들을 포함한 다양한 <b>희귀 식물</b>을 한 곳에서 감상할 수 있는 수목원으로 자리매김하고 있습니다.</p>
       </div>
 
       <section class="intro-gallery reveal from-up" aria-label="가시림 이미지 갤러리" data-gallery>
@@ -68,10 +71,24 @@
         </button>
         <div class="intro-gallery-viewport">
           <div class="intro-gallery-track">
-            <div class="gimg gimg-a" role="img" aria-label="갤러리 이미지 A"></div>
-            <div class="gimg gimg-b" role="img" aria-label="갤러리 이미지 B"></div>
-            <div class="gimg gimg-c" role="img" aria-label="갤러리 이미지 C"></div>
-            <div class="gimg gimg-d" role="img" aria-label="갤러리 이미지 D"></div>
+            <div class="gimg gimg-1" role="img" aria-label="Mainpage 이미지 1"></div>
+            <div class="gimg gimg-2" role="img" aria-label="Mainpage 이미지 2"></div>
+            <div class="gimg gimg-3" role="img" aria-label="Mainpage 이미지 3"></div>
+            <div class="gimg gimg-4" role="img" aria-label="Mainpage 이미지 4"></div>
+            <div class="gimg gimg-5" role="img" aria-label="Mainpage 이미지 5"></div>
+            <div class="gimg gimg-6" role="img" aria-label="Mainpage 이미지 6"></div>
+            <div class="gimg gimg-7" role="img" aria-label="Mainpage 이미지 7"></div>
+            <div class="gimg gimg-8" role="img" aria-label="Mainpage 이미지 8"></div>
+            <div class="gimg gimg-9" role="img" aria-label="Mainpage 이미지 9"></div>
+            <div class="gimg gimg-10" role="img" aria-label="Mainpage 이미지 10"></div>
+            <div class="gimg gimg-11" role="img" aria-label="Mainpage 이미지 11"></div>
+            <div class="gimg gimg-12" role="img" aria-label="Mainpage 이미지 12"></div>
+            <div class="gimg gimg-13" role="img" aria-label="Mainpage 이미지 13"></div>
+            <div class="gimg gimg-14" role="img" aria-label="Mainpage 이미지 14"></div>
+            <div class="gimg gimg-15" role="img" aria-label="Mainpage 이미지 15"></div>
+            <div class="gimg gimg-16" role="img" aria-label="Mainpage 이미지 16"></div>
+            <div class="gimg gimg-17" role="img" aria-label="Mainpage 이미지 17"></div>
+            <div class="gimg gimg-18" role="img" aria-label="Mainpage 이미지 18"></div>
           </div>
         </div>
         <button class="intro-gallery-nav intro-gallery-nav--next embla__next" type="button" aria-label="다음 사진" data-gallery-next>
@@ -81,48 +98,56 @@
         </button>
       </section>
 
+      <div class="intro-img-wide1 reveal from-left"></div>
+
+      <p class ="p left">팜파스그라스 길 (8월-11월)</p>
+
       <div class="article article-container reveal from-right">
         <h3 class="h right">수목원은 어떻게 감상해야 하는가</h3>
-        <p class="p right">가시림은 단순한 수목 감상을 넘어, 자연 속에서 오감을 열고 자신을 바라보는 경험을 제공하는 공간이다. 자기 성찰과 휴식을 통해 이루어지는 치유를 지향하며, 수목원인 동시에 복합문화공간이기도 하다. <b>궁극적으로 가시림이 구현하고자 하는 것은 “치유의 정원”이다.</b></p>
+        <p class="p right">가시림은 단순한 수목 감상을 넘어, 자연 속에서 오감을 열고 자신을 바라보는 경험을 제공하는 공간입니다.<br>자기 성찰과 휴식을 통해 이루어지는 치유를 지향하며, 수목원인 동시에 복합문화공간이기도 합니다.<br>궁극적으로 가시림은 <b>치유의 정원</b>을 구현하고자 합니다.</p>
       </div>
 
-      <div class="intro-img-wide reveal from-left"></div>
-      <div class="intro-img-tall reveal from-right"></div>
-      <div class="intro-img-long reveal from-up"></div>
+      <div class="intro-img-wide2 reveal from-left"></div>
+      
+      <p class ="p left">가시림 카페에서 바라본 곶자왈 정원</p>
 
       <div class="article article-container reveal from-up">
         <h3 class="h left">자연을 다각도에서 체험하다</h3>
-        <p class="p left">가시림은 <b>원예, 명상, 예술</b> 프로그램을 통해 <b>자연을 다각도로 체험</b>할 수 있도록 한다. 이를 통해 자신의 감각과 자연에 집중하고 마음을 편안히 가라앉히며 치유의 시간을 갖게 된다.</p>
+        <p class="p left">가시림은 <b>원예, 명상, 예술</b> 프로그램을 통해 <b>자연을 다각도로 체험</b>할 수 있는 경험을 선사합니다.<br>이를 통해 자신의 감각과 자연에 집중하고 마음을 편안히 가라앉히며 치유의 시간을 갖게 됩니다.</p>
       </div>
 
-      <div class="intro-mosaic-right reveal from-right"></div>
-      <div class="intro-mosaic-left-top reveal from-left"></div>
-      <div class="intro-mosaic-left-bottom reveal from-left"></div>
-    </section>
-
-    <!-- Main Space Section -->
-    <section class="cards-container" id="space" aria-labelledby="space-heading">
-      <h2 id="space-heading" class="cards-title">Space</h2>
-      <div class="cards">
-        <a class="card" href="공간소개.html?space=%EC%9C%A0%EB%A6%AC%20%EC%98%A8%EC%8B%A4" aria-label="가든 센터">
-          <div class="card-img" style="--bg:url('../img/가든센터.jpg');"></div>
-          <div class="card-overlay"></div>
-          <div class="card-label">식물 온실</div>
+      <div class="facility-grid">
+        <a class="facility-card" data-category="experience">
+          <figure class="product-card__media">
+            <img src="../img/facility/facility1.png" alt="유리온실" loading="lazy">
+          </figure>
+          <div class="product-card__copy">
+            <p class="product-card__title">유리 온실 (명상 스튜디오)</h3>
+          </div>
         </a>
-        <a class="card" href="공간소개.html?space=%ED%94%8C%EB%9E%9C%ED%8A%B8%20%EC%B9%B4%ED%8E%98" aria-label="카페">
-          <div class="card-img" style="--bg:url('../img/카페.jpg');"></div>
-          <div class="card-overlay"></div>
-          <div class="card-label">카페</div>
+        <a class="facility-card" data-category="experience">
+          <figure class="product-card__media">
+            <img src="../img/facility/facility2.png" alt="가든센터" loading="lazy">
+          </figure>
+          <div class="product-card__copy">
+            <p class="product-card__title">가든 센터 (식물 판매장)</h3>
+          </div>
         </a>
-        <a class="card" href="공간소개.html?space=%EB%A7%88%EC%9D%8C%20%EC%98%A8%EC%8B%A4%20%EC%8A%A4%ED%8A%9C%EB%94%94%EC%98%A4" aria-label="교육실">
-          <div class="card-img" style="--bg:url('../img/유리온실2.jpg');"></div>
-          <div class="card-overlay"></div>
-          <div class="card-label">마음 온실</div>
+        <a class="facility-card" data-category="experience">
+          <figure class="product-card__media">
+            <img src="../img/facility/facility3.png" alt="카페" loading="lazy">
+          </figure>
+          <div class="product-card__copy">
+            <p class="product-card__title">카페</h3>
+          </div>
         </a>
-        <a class="card" href="공간소개.html?space=%EA%B0%80%EB%93%A0%EC%84%BC%ED%84%B0" aria-label="미정 공간">
-          <div class="card-img" style="--bg:url('../img/유리온실.jpg');"></div>
-          <div class="card-overlay"></div>
-          <div class="card-label">식물 가게</div>
+        <a class="facility-card" data-category="experience">
+          <figure class="product-card__media">
+            <img src="../img/facility/facility4.png" alt="가든센터2" loading="lazy">
+          </figure>
+          <div class="product-card__copy">
+            <p class="product-card__title">가든 센터 (체험장)</h3>
+          </div>
         </a>
       </div>
     </section>
