--- a/index.html
+++ b/index.html
@@ -28,13 +28,6 @@
 
     <!-- 가시림 소개 -->
     <section class="body-container body-container--stacked" aria-labelledby="intro-heading">
-      <h2 id="intro-heading" class="sr-only">가시림 소개</h2>
-
-      <div class="article article-container reveal from-up">
-        <h3 class="intro-h3 center">加 時 林</h3>
-        <p class="p center">더할 가         때 시          수풀 림</p>
-      </div>
-
       <div class="intro-hero reveal parallax from-up" data-video>
         <video class="intro-video" preload="auto" autoplay muted loop playsinline webkit-playsinline disablePictureInPicture controlsList="nodownload noplaybackrate noremoteplayback nofullscreen">
           <source src="assets/video/gasirim.mp4" type="video/mp4">
@@ -59,8 +52,8 @@
         <h3 class="h left">제주 4호 민간정원</h3>
         <p class="p left">가시림 수목원은 정부에 등록된 제주 4호 민간정원으로 2023년 12월에 오픈했으며 <b>12개의 정원·숲·길</b>로 구성되어 있습니다. <b>150년</b> 이상 된 수목이 다수 존재하며, 
                           단순한 포토스팟 조형물이 아닌 진정성 있는 식물 배치 철학을 바탕으로 운영됩니다. 30년 동안 조경 사업에 몸담아 온 강남춘 대표는 자연이 지닌 치유의 힘을 직접 경험하며, 
-                          그 소중 한 경험을 더 많은 사람들과 나누고자 하는 마음 으로 가시림수목원을 조성했습니다. 이 마음을 담 아 매일 아침 수목원 곳곳을 분주히 가꿉니다.
-                          <br>이러한 노력으로, 가시림은 <b>사계절</b> 각기 다른 경관을 선사하며, <b>제주 자생 식물</b>들을 포함한 다양한 <b>희귀 식물</b>을 한 곳에서 감상할 수 있는 수목원으로 자리매김하고 있습니다.</p>
+                          그 소중 한 경험을 더 많은 사람들과 나누고자 하는 마음 으로 가시림수목원을 조성했습니다. 이 마음을 담 아 매일 아침 수목원 곳곳을 분주히 가꿉니다.</p> 
+        <p class="p left">이러한 노력으로, 가시림은 <b>사계절</b> 각기 다른 경관을 선사하며, <b>제주 자생 식물</b>들을 포함한 다양한 <b>희귀 식물</b>을 한 곳에서 감상할 수 있는 수목원으로 자리매김하고 있습니다.</p>
       </div>
 
       <section class="intro-gallery reveal from-up" aria-label="가시림 이미지 갤러리" data-gallery>
