Remove rounded styling and keep intro visuals visible

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
       <div class="facility-grid">
         <a class="facility-card" data-category="experience">
           <figure class="product-card__media">
-            <img src="../img/facility/facility1.png" alt="유리온실" loading="lazy">
+            <img src="assets/img/facility/facility1.png" alt="유리온실" loading="lazy">
           </figure>
           <div class="product-card__copy">
             <p class="product-card__title">유리 온실 (명상 스튜디오)</h3>
@@ -120,7 +120,7 @@
         </a>
         <a class="facility-card" data-category="experience">
           <figure class="product-card__media">
-            <img src="../img/facility/facility2.png" alt="가든센터" loading="lazy">
+            <img src="assets/img/facility/facility2.png" alt="가든센터" loading="lazy">
           </figure>
           <div class="product-card__copy">
             <p class="product-card__title">가든 센터 (식물 판매장)</h3>
@@ -128,7 +128,7 @@
         </a>
         <a class="facility-card" data-category="experience">
           <figure class="product-card__media">
-            <img src="../img/facility/facility3.png" alt="카페" loading="lazy">
+            <img src="assets/img/facility/facility3.png" alt="카페" loading="lazy">
           </figure>
           <div class="product-card__copy">
             <p class="product-card__title">카페</h3>
@@ -136,7 +136,7 @@
         </a>
         <a class="facility-card" data-category="experience">
           <figure class="product-card__media">
-            <img src="../img/facility/facility4.png" alt="가든센터2" loading="lazy">
+            <img src="assets/img/facility/facility4.png" alt="가든센터2" loading="lazy">
           </figure>
           <div class="product-card__copy">
             <p class="product-card__title">가든 센터 (체험장)</h3>
