--- a/소개.html
+++ b/소개.html
@@ -8,7 +8,7 @@
   <link rel="icon" href="assets/img/favicon.svg" type="image/svg+xml">
 
   <!-- Preload the big header background (faster perceived load) -->
-  <link rel="preload" as="image" href="assets/img/main.jpg">
+  <link rel="preload" as="image" href="assets/img/pageheader/intro-page.jpg">
 
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -24,7 +24,7 @@
   <div class="page">
 
     <!-- Header -->
-    <div id="site-header" data-include="partials/header-site.html" data-hero-title="가시림 소개" data-hero-image="assets/img/banner-fourseasons/summer.jpg" data-hero-alt="여름 햇살이 스며든 가시림 정원 전경"></div>
+    <div id="site-header" data-include="partials/header-site.html" data-hero-title="소개" data-hero-image="assets/img/pageheader/intro-page.jpg"></div>
     <div id="site-bar" data-include="partials/sticky-header-bar.html"></div>
 
     <main>
