--- a/프로그램목록.html
+++ b/프로그램목록.html
@@ -8,7 +8,7 @@
   <link rel="icon" href="assets/img/favicon.svg" type="image/svg+xml">
 
   <!-- Preload the big header background (faster perceived load) -->
-  <link rel="preload" as="image" href="assets/img/main.jpg">
+  <link rel="preload" as="image" href="assets/img/pageheader/program-page.jpg">
 
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -23,7 +23,7 @@
 <body>
   <div class="page">
     <!-- Header -->
-    <div id="site-header" data-include="partials/header-site.html" data-hero-title="프로그램 목록" data-hero-image="assets/img/가든센터.jpg" data-hero-alt="가시림 가든센터 외관"></div>
+    <div id="site-header" data-include="partials/header-site.html" data-hero-title="프로그램" data-hero-image="assets/img/pageheader/program-page.jpg"></div>
     <div id="site-bar" data-include="partials/sticky-header-bar.html"></div>
 
     <main>
