--- a/shop.html
+++ b/shop.html
@@ -8,7 +8,7 @@
   <link rel="icon" href="assets/img/favicon.svg" type="image/svg+xml">
 
   <!-- Preload the big header background (faster perceived load) -->
-  <link rel="preload" as="image" href="assets/img/main.jpg">
+  <link rel="preload" as="image" href="assets/img/pageheader/shop-page.jpg">
 
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -24,7 +24,7 @@
   <div class="page">
     
     <!-- Header -->
-    <div id="site-header" data-include="partials/header-site.html" data-hero-title="Shop" data-hero-image="assets/img/banner-fourseasons/summer.jpg" data-hero-alt="샵"></div>
+    <div id="site-header" data-include="partials/header-site.html" data-hero-title="Shop" data-hero-image="assets/img/pageheader/shop-page.jpg"></div>
     <div id="site-bar" data-include="partials/sticky-header-bar.html"></div>
 
     <main class="shop-main" aria-labelledby="shop-heading">
