--- a/프로그램소개.html
+++ b/프로그램소개.html
@@ -8,7 +8,7 @@
   <link rel="icon" href="assets/img/favicon.svg" type="image/svg+xml">
 
   <!-- Preload the big header background (faster perceived load) -->
-  <link rel="preload" as="image" href="assets/img/main.jpg">
+  <link rel="preload" as="image" href="assets/img/pageheader/program-page.jpg">
 
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -23,7 +23,7 @@
 <body>
   <div class="page">
     <!-- Header -->
-    <div id="site-header" data-include="partials/header-site.html" data-hero-title="프로그램 소개" data-hero-image="assets/img/유리온실2.jpg" data-hero-alt="프로그램이 열리는 가시림 온실 전경"></div>
+    <div id="site-header" data-include="partials/header-site.html" data-hero-title="프로그램" data-hero-image="assets/img/pageheader/program-page.jpg"></div>
     <div id="site-bar" data-include="partials/sticky-header-bar.html"></div>
 
     <main class="program-main" aria-labelledby="program-heading">
