Refine intro galleries and hero imagery

--- a/둘러보기.html
+++ b/둘러보기.html
@@ -44,7 +44,7 @@
         <p class="p left">가시림 수목원은 정부에 등록된 제주 4호 민간정원으로 2023년 12월에 오픈했으며 <b>14개의 정원·숲·길</b>로 구성되어 있다. <b>200년 이상 된 수목</b>이 다수 존재하며, 단순한 포토스팟 조형물이 아닌 진정성 있는 식물 배치 철학을 바탕으로 운영된다. 대표가 매일 아침 직접 나와 세심하게 관리함으로써 사계절 각기 다른 경관을 제공하며, 한 곳에서 다양한 <b>희귀 식물</b>을 감상할 수 있는 독보적인 수목원으로 자리매김하고 있다.</p>
       </div>
 
-      <section class="intro-gallery reveal from-up" aria-label="가시림 이미지 갤러리" data-gallery>
+      <section class="intro-gallery reveal from-up" aria-label="가시림 이미지 갤러리" data-gallery data-gallery-duration="60">
         <button class="intro-gallery-nav intro-gallery-nav--prev embla__prev" type="button" aria-label="이전 사진" data-gallery-prev>
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 12 20" fill="currentColor" aria-hidden="true" focusable="false">
             <path d="M11.77 1.77 10 0 0 10l10 10 1.77-1.77L3.54 10l8.23-8.23Z" />
@@ -52,10 +52,18 @@
         </button>
         <div class="intro-gallery-viewport">
           <div class="intro-gallery-track">
-            <div class="gimg gimg-a" role="img" aria-label="갤러리 이미지 A"></div>
-            <div class="gimg gimg-b" role="img" aria-label="갤러리 이미지 B"></div>
-            <div class="gimg gimg-c" role="img" aria-label="갤러리 이미지 C"></div>
-            <div class="gimg gimg-d" role="img" aria-label="갤러리 이미지 D"></div>
+            <figure class="intro-gallery__slide">
+              <img src="assets/img/gallery/pic2.jpg" alt="가시림 수목원의 숲길 전경">
+            </figure>
+            <figure class="intro-gallery__slide">
+              <img src="assets/img/gallery/pic6.jpg" alt="햇살이 비치는 산책 길" loading="lazy">
+            </figure>
+            <figure class="intro-gallery__slide">
+              <img src="assets/img/gallery/pic10.jpg" alt="정원에서 휴식하는 방문객" loading="lazy">
+            </figure>
+            <figure class="intro-gallery__slide">
+              <img src="assets/img/gallery/pic14.jpg" alt="수목원의 작은 연못" loading="lazy">
+            </figure>
           </div>
         </div>
         <button class="intro-gallery-nav intro-gallery-nav--next embla__next" type="button" aria-label="다음 사진" data-gallery-next>
@@ -70,7 +78,9 @@
         <p class="p right">가시림은 단순한 수목 감상을 넘어, 자연 속에서 오감을 열고 자신을 바라보는 경험을 제공하는 공간이다. 자기 성찰과 휴식을 통해 이루어지는 치유를 지향하며, 수목원인 동시에 복합문화공간이기도 하다. <b>궁극적으로 가시림이 구현하고자 하는 것은 “치유의 정원”이다.</b></p>
       </div>
 
-      <div class="intro-img-wide reveal from-left"></div>
+      <figure class="intro-img-wide reveal from-left">
+        <img src="assets/img/gallery/pic19.jpg" alt="가시림의 넓은 산책 공간" loading="lazy">
+      </figure>
       <div class="intro-img-tall reveal from-right"></div>
       <div class="intro-img-long reveal from-up"></div>
 
