Widen intro media and refine facility captions

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
             <img src="assets/img/facility/facility1.png" alt="유리온실" loading="lazy">
           </figure>
           <div class="product-card__copy">
-            <p class="product-card__title">유리 온실 (명상 스튜디오)</h3>
+            <p class="product-card__title">유리 온실 (명상 스튜디오)</p>
           </div>
         </a>
         <a class="facility-card" data-category="experience">
@@ -161,7 +161,7 @@
             <img src="assets/img/facility/facility2.png" alt="가든센터" loading="lazy">
           </figure>
           <div class="product-card__copy">
-            <p class="product-card__title">가든 센터 (식물 판매장)</h3>
+            <p class="product-card__title">가든 센터 (식물 판매장)</p>
           </div>
         </a>
         <a class="facility-card" data-category="experience">
@@ -169,7 +169,7 @@
             <img src="assets/img/facility/facility3.png" alt="카페" loading="lazy">
           </figure>
           <div class="product-card__copy">
-            <p class="product-card__title">카페</h3>
+            <p class="product-card__title">카페</p>
           </div>
         </a>
         <a class="facility-card" data-category="experience">
@@ -177,7 +177,7 @@
             <img src="assets/img/facility/facility4.png" alt="가든센터2" loading="lazy">
           </figure>
           <div class="product-card__copy">
-            <p class="product-card__title">가든 센터 (체험장)</h3>
+            <p class="product-card__title">가든 센터 (체험장)</p>
           </div>
         </a>
       </div>
